tests/ui/resolve/issue-12796.stderr
error[E0401]: can't use `Self` from outer item
  --> $DIR/issue-12796.rs:3:22
   |
LL |         fn inner(_: &Self) {
   |                      ^^^^
   |                      |
   |                      use of `Self` from outer item
   |                      can't use `Self` here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0401`.
